# PWHomeWork10

./: README.md  pyproject.toml
django_quotes/django_quotes/: asgi.py  settings.py  urls.py  wsgi.py
django_quotes/quotes_app/: forms.py  models.py  urls.py  views.py
django_quotes/quotes_app/migrations/: 0001_initial.py  0002_alter_quote_author_delete_note.py
django_quotes/quotes_app/templates/quotes_app/: add_author.html  add_quote.html  add_tag.html  author.html  base.html  index.html
django_quotes/users/: views.py
django_quotes/users/templates/users/: login.html  signup.html
